Trying to fix a bug where the h1 is hidden by menu on mobile

--- a/secondstyle.css
+++ b/secondstyle.css
@@ -44,6 +44,7 @@ a:hover{
 
 .scrollable{
     display: block;
+    padding-top: 4em;
 
 }
 
@@ -175,6 +176,7 @@ select[name="genres"]{
     .scrollable{
         display: flex;
         justify-content: center;
+        padding-top:0px;
     }
 
     h1{
